--- a/documentation/kit-master-data-overview.mdx
+++ b/documentation/kit-master-data-overview.mdx
@@ -2,6 +2,26 @@
 title: KIT Master Data Overview
 ---
 
+{/********************************************************************************* 
+ * Copyright (c) 2025 Contributors to the Eclipse Foundation
+ * 
+ * See the NOTICE file(s) distributed with this work for additional
+ * information regarding copyright ownership.
+ * 
+ * This program and the accompanying materials are made available under the
+ * terms of the Apache License, Version 2.0 which is available at
+ * https://www.apache.org/licenses/LICENSE-2.0.
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations
+ * under the License.
+ * 
+ * SPDX-License-Identifier: Apache-2.0
+ ********************************************************************************/
+ }
+
 import { kitsData, dataspaces } from '../data/kitsData.js';
 import InventoryIcon from '@mui/icons-material/Inventory';
 import SchoolIcon from '@mui/icons-material/School';
@@ -117,6 +137,15 @@ export const KitCard = ({ kit }) => (
         {kit.metadata && (
           <div style={{ marginTop: '8px', fontSize: '12px', color: 'var(--ifm-color-content-secondary)' }}>
             Last Updated: {kit.metadata.lastUpdated} | Version: {kit.metadata.latestVersion}
+            {kit.maturity?.graduatedAt && (
+              <span style={{ 
+                marginLeft: '8px', 
+                color: '#10b981', 
+                fontWeight: '500' 
+              }}>
+                | Graduated: {kit.maturity.graduatedAt}
+              </span>
+            )}
           </div>
         )}
       </div>
@@ -590,4 +619,3 @@ This example shows:
 - [KIT Getting Started Guide](./kit-getting-started)
 - [TRG 9.02 KIT Maturity Levels](./trg-9-02-kit-maturity-levels)
 - [TRG 9.03 KIT Artifacts](./trg-9-03-kit-artifacts)
-- [KIT Template Repository](https://github.com/eclipse-tractusx/kit-template)
