feat: Update KIT documentation references and structure, including KIT Framework and Maturity Levels

--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -1,5 +1,5 @@
 ---
-title: KIT Artifacts
+title: KIT Framework
 ---
 
 {/********************************************************************************* 
@@ -27,10 +27,11 @@ import { KitStructureTable } from '@site/src/components/2.0/KitComponents';
 | Status     | Created      | Post-History                           |
 |------------|--------------|----------------------------------------|
 | Draft      | 04-Apr-2024  | Initial contribution                   |
+| Active     | 07-Nov-2025  | Added Dataspace Extensions section and Structure     |
 
 This explains each artifact a KIT can or must follow - depending on the graduation stage [TRG 9.01](/docs/release/trg-0/trg-9-01). An artifact is textual content or a technical component that is part of a KIT (e.g. a Vision statement).
 
-## KIT Structure Overview
+## The KIT Framework & Structure
 
 KITs are structured around different views, each targeting specific stakeholders with relevant content:
 
