--- a/documentation/kit-getting-started.mdx
+++ b/documentation/kit-getting-started.mdx
@@ -116,7 +116,7 @@ For providing a KIT to the Eclipse project Tractus-X please be aware of the "get
 Prerequisites: [Tractus-X getting started](https://eclipse-tractusx.github.io/docs/oss/getting-started)
 
 - **TRG 9.02 KIT Maturity Levels** A KIT is always structured the same way and follows three graduation stages
-- **TRG 9.03 KIT Artifacts** Each of the artifacts in a KIT are explained with examples
+- **TRG 9.03 KIT Framework** Each of the artifacts in a KIT are explained with examples
 
 ## Prerequisites
 
@@ -373,7 +373,7 @@ Follow this structure:
   margin: '20px 0'
 }}>
   <a 
-    href="./kit-artifacts" 
+    href="./kit-framework" 
     style={{
       display: 'flex',
       alignItems: 'center',
@@ -415,7 +415,7 @@ Follow this structure:
       gap: '12px'
     }}>
       <MenuBookIcon sx={{ fontSize: 20 }} />
-      <span>Click here to view the KIT Artifacts Guide with details on content structure</span>
+      <span>Click here to view the KIT Framework Guide with details on content structure</span>
     </div>
     <OpenInNewIcon sx={{ fontSize: 18, opacity: 0.8 }} />
   </a>
@@ -519,7 +519,7 @@ Congratulations! Your KIT is now part of the Eclipse Tractus-X ecosystem!
 ### Documentation References
 
 - [TRG 9.02 KIT Maturity Levels](./trg-9-02-kit-maturity-levels)
-- [TRG 9.03 KIT Artifacts](./trg-9-03-kit-artifacts)
+- [TRG 9.03 KIT Framework](./trg-9-03-kit-framework)
 - [Tractus-X Developer Hub](https://eclipse-tractusx.github.io/docs/developer)
 - [Community Guidelines](https://eclipse-tractusx.github.io/community)
 
