--- a/documentation/kit-master-data-overview.mdx
+++ b/documentation/kit-master-data-overview.mdx
@@ -618,4 +618,4 @@ This example shows:
 
 - [KIT Getting Started Guide](./kit-getting-started)
 - [TRG 9.02 KIT Maturity Levels](./trg-9-02-kit-maturity-levels)
-- [TRG 9.03 KIT Artifacts](./trg-9-03-kit-artifacts)
+- [TRG 9.03 KIT Framework](./trg-9-03-kit-framework)
