--- a/documentation/kit-maturity-levels.mdx
+++ b/documentation/kit-maturity-levels.mdx
@@ -411,7 +411,7 @@ Steps of the Incubating phase:
 
 ## Artifacts and Deliverables
 
-This section provides an overview of required artifacts for each maturity level and incubating sub-state. For detailed examples and specifications, please refer to TRG 8.03 - KIT Artifacts.
+This section provides an overview of required artifacts for each maturity level and incubating sub-state. For detailed examples and specifications, please refer to TRG 8.03 - KIT Framework.
 
 **Legend**:
 
