feat: Update documentation links for KIT Maturity Levels and KIT Framework for consistency

--- a/documentation/kit-getting-started.mdx
+++ b/documentation/kit-getting-started.mdx
@@ -120,7 +120,7 @@ Prerequisites: [Tractus-X getting started](https://eclipse-tractusx.github.io/do
 
 ## Prerequisites
 
-You need to have a Github Account and to fulfill the requirements from the [Developer Hub Getting Started Guide](docs/getting-started).
+You need to have a Github Account and to fulfill the requirements from the [Developer Hub Getting Started Guide](/docs/getting-started).
 
 ## Get Informed
 
@@ -518,12 +518,12 @@ Congratulations! Your KIT is now part of the Eclipse Tractus-X ecosystem!
 
 ### Documentation References
 
-- [TRG 9.02 KIT Maturity Levels](./trg-9-02-kit-maturity-levels)
-- [TRG 9.03 KIT Framework](./trg-9-03-kit-framework)
+- [TRG 9.02 KIT Maturity Levels](./kit-maturity-levels)
+- [TRG 9.03 KIT Framework](./kit-framework)
 - [Tractus-X Developer Hub](https://eclipse-tractusx.github.io/docs/developer)
 - [Community Guidelines](https://eclipse-tractusx.github.io/community)
 
 ### Templates & Examples
 
 - [Existing KIT Examples](https://eclipse-tractusx.github.io/Kits)
-- [Documentation Style Guide](./documentation-guidelines)
+- [Documentation Style Guide](/docs/website-guidelines/kit-structure)
