--- a/documentation/kit-master-data-overview.mdx
+++ b/documentation/kit-master-data-overview.mdx
@@ -617,5 +617,5 @@ This example shows:
 ### Related Documentation
 
 - [KIT Getting Started Guide](./kit-getting-started)
-- [TRG 9.02 KIT Maturity Levels](./trg-9-02-kit-maturity-levels)
-- [TRG 9.03 KIT Framework](./trg-9-03-kit-framework)
+- [TRG 9.02 KIT Maturity Levels](./kit-maturity-levels)
+- [TRG 9.03 KIT Framework](./kit-framework)
