Added reference to IC Basics standard

--- a/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -409,7 +409,7 @@ A Submodel Descriptor for Parquet File Information may be structured as:
 | semanticId.keys[].value | urn:samm:io.catenax.binary_exchange:1.0.0#BinaryExchange                                                | Aspect Model Providing DSP Metadata for Binary File Exchange.                                                     |
 | description[].text      | Submodel descriptor for quality use case, supporting parquet file exchange through DSP.                 | Further description for the consumer.                                                                             |
 
-**Aspect model BinaryExchange can be found in Semantic Modeling repository [Github](https://github.com/eclipse-tractusx/sldt-semantic-models/)**
+**Aspect model BinaryExchange is part of Industry Core standard [CX-0151-IndustryCoreBasics](https://catenax-ev.github.io/docs/next/standards/CX-0151-IndustryCoreBasics#1222-additional-recommendations-and-comments) and can be found in Semantic Modeling repository [Github](https://github.com/eclipse-tractusx/sldt-semantic-models/)**
 
 A sample payload for BinaryExchange aspect model is described below:
   ```json
